fix layout shift for card preloader

--- a/src/styles/sass/global/base.scss
+++ b/src/styles/sass/global/base.scss
@@ -44,7 +44,8 @@ a {
 }
 
 .spinner-wrap {
-  min-height: 100px;
+  width: 400px;
+  height: 680px;
 }
 
 .spinner {
